example changes to index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <p>This is an example of a static website page.</p>
     <p>New changes</p>
+    <p>Another new change</p>
   </body>
 </html>
