new flappybird page created

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <p>This is an example of a static website page.</p>
     <p>New changes</p>
+    <a href="flappybird.html">Flappy Bird w/Pygame </a>
   </body>
 </html>
