--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>GitHub Pages Example</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
+  <body class="background-style">
     <p>This is an example of a static website page.</p>
     <p>New changes</p>
     <a href="flappybird.html">Flappy Bird w/Pygame </a>
