style sheet added with new snake game page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="background-style">
-    <p>This is an example of a static website page.</p>
-    <p>New changes</p>
-    <a href="flappybird.html">Flappy Bird w/Pygame </a>
+    <div class="page-title">
+      <p>Tutorial Reference Sheet</p>
+    </div>
+    <div class="project-links">
+      <a href="flappybird.html">Flappy Bird w/Pygame</a>
+      <a href="snake.html">Snake Game w/Turtle</a>
+    </div>
   </body>
 </html>
