folder restructure and image added

--- a/flappybird.html
+++ b/flappybird.html
@@ -4,6 +4,7 @@
     <title>Flappy Bird Tutorial</title>
   </head>
   <body>
+    <img src="images/flappy-example.png" />
     <p>Designing Flappy Bird in Pygame</p>
   </body>
 </html>
