new web structure

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body class="background-style">
+    <div class="navbar">
+      <a href="projects.html">Projects</a>
+      <a href="tutorial.html">Tutorials</a>
+    </div>
+
     <div class="page-title">
       <p>Tutorial Reference Sheet</p>
-    </div>
-    <div class="project-links">
-      <a href="flappybird.html">Flappy Bird w/Pygame</a>
-      <a href="snake.html">Snake Game w/Turtle</a>
     </div>
   </body>
 </html>
