--- a/flappybird.html
+++ b/flappybird.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <title>Flappy Bird Tutorial</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body>
+  <body class="background-style">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="tutorial.html">Tutorials</a>
+    </div>
+
     <img src="images/flappy-example.png" />
     <p>Designing Flappy Bird in Pygame</p>
   </body>
