--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body class="background-style">
     <div class="navbar">
+      <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="tutorial.html">Tutorials</a>
     </div>
