--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,13 @@
     <title>Projects</title>
   </head>
   <link rel="stylesheet" href="styles/styles.css" />
-  <body>
+  <body class="background-style">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="tutorial.html">Tutorials</a>
+    </div>
+
     <div class="project-links">
       <a href="flappybird.html">Flappy Bird w/Pygame</a>
       <a href="snake.html">Snake Game w/Turtle</a>
