--- a/snake.html
+++ b/snake.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <title>Snake Game Tutorial</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body>
+  <body class="background-style">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="tutorial.html">Tutorials</a>
+    </div>
+
     <p>Designing Snake Game in Turtle</p>
   </body>
 </html>
